# agent-runtime

./: .gitignore  CLAUDE.md  Makefile  README.md  config.yml  pyproject.toml  requirements.txt
v1/: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  config.yml  pyproject.toml
v1/_architecture/: 00-overview.md  01-runtime-as-god.md  02-pipeline-and-stages.md  04-subagent-dispatch.md
v1/_plans/: 0002-llm-provider-design.md  0004-llm-provider-phase2-anthropic-provider.md  0006-llm-provider-phase4-settings-factory.md  0007-llm-provider-phase5-wire-agent.md  0008-llm-provider-phase6-messenger-cleanup.md  0015-plan-and-execute-design.md  0016-plan-and-execute-phase1-schema.md  0021-plan-and-execute-phase6-wire-agent.md  0022-runtime-infrastructure-design.md  0023-runtime-phase1-openai-provider.md  0028-runtime-phase5b-action-guard.md  0029-runtime-phase6-context-manager.md  0031-runtime-fixes-plan-awareness-error-detection.md  0032a-critic-phase1-schema-changes.md  0032d-critic-phase4-tool-per-step-enforcement.md  0032e-critic-phase5-monitor-improvements.md  0033-architecture-review-paper-comparison.md  0034b-phase2-critic-planning-refinement.md  0034d-phase4-multi-model-consensus.md  0034e-phase5-structured-workflows.md  0035b-fix-context-fidelity.md  0035c-fix-run-loop-cap.md  0036-bash-escalation-design.md  0036a-bash-escalation-script-patterns.md  0037e-council-phase5-integration.md  0038a-council-parallel-dispatch.md  0039-semantic-workflow-routing-design.md  0039b-semantic-routing-phase2-classifier-result-type.md  0039e-semantic-routing-phase5-observability.md  0040a-pipeline-phase1-scaffolding.md  0040g-pipeline-phase7-direct-execution-cutover.md  0041-web-toolset.md  0043-artifact-store-tier1.md  0044-artifact-store-tier2.md  0045-artifact-store-tier3.md  0046-search-toolset.md  0047-git-toolset.md  0049-orm-dal-layer.md  0049a-orm-phase1-foundation.md  0049d-orm-phase4-briefbot-models.md  (+45 more)
v1/observability/: loader.py
v1/scripts/: analyze_logs.py  export_events.py  export_session.py  migrate.sh  replay_session.py  service_repl.py
v1/src/: agent.py  alembic.ini  app_config.py  logger.py  main.py  shared_types.py
v1/src/alembic/: sql_runner.py
v1/src/cli/: __init__.py  resume_picker.py  subagent.py  wipe.py
v1/src/config/: __init__.py  app.py  artifact_store.py  container.py  llm.py  routing.py
v1/src/db/: engine.py
v1/src/planning/: schema.py
v1/src/plugins/: cli.py  manifest.py
v1/src/providers/: anthropic.py  base.py  factory.py  openai_compat.py
v1/src/rag/: schema.py
v1/src/routing/: static_router.py  toolset_patterns.py
v1/src/runtime/: context_manager.py  cost.py  critic.py  identity.py  importance.py  injection_gate.py  json_extract.py  path_resolver.py  pipeline.py  pipeline_context.py  schema.py  stage_result.py  tool_executor.py  tool_loop.py  utils.py  validator.py  web_inspector.py
v1/src/service/: errors.py  events.py  inprocess.py  interface.py  queue.py
v1/src/skills/: criteria.py  registry.py
v1/src/tools/: registry.py
v1/src/ui/: app.py  app_keybindings.py  app_resume.py  input_model.py  spinner.py
v1/tests/unit/: test_analysis_manifest_cap.py  test_context_manager.py  test_event_coverage.py  test_loader.py  test_pipeline_identity.py  test_plugins.py  test_redactor.py  test_run_state.py  test_runtime_scope.py  test_sandbox_hardening.py  test_subagent_overrides.py  test_subagent_spinner_inheritance.py  test_validator.py
v2/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.yml  pyproject.toml
v2/_architecture/: cli-reference.md  config-reference.md  plugin-authoring.md  provider-authoring.md  tool-authoring.md
v2/_design/: 0001-foundation-phase0-design.md  0002-foundation-phase1-gemini-sdk-byte-fidelity.md  0003-foundation-phase1-implementation.md  0004-foundation-phase2.0.5-replay.md  0005-foundation-phase2.1-bash-and-guards.md  0006-foundation-phase2.1.5-pause-and-resume.md  0007-foundation-phase2.2-branch-and-rerun.md  0008-foundation-logging.md  0009-context-manager-sliding-window.md  0010-anthropic-provider.md  0011-tui-polish.md  0012-destructive-action-gate.md  0013-web-search-and-fetch.md  0014-ollama-provider.md  0015-llama-cpp-provider.md  0016-briefbot-research-corpus.md  0017-provider-picker.md  0018-llm-server-lifecycle.md  0019-cross-provider-replay.md  0020-subagent-dispatch.md  0021-gcs-plugin.md  0022-video-sub-agent.md  0023-setup-hub-and-themes.md  0024-container-orchestration-and-job-dispatch.md  0025-mcp-client-integration.md  0026-interactive-time-travel.md  0027-visual-timeline.md
v2/_deviations/: 0001-mcp-client-integration.md
v2/_sandbox/: experiment_anthropic_sdk_fidelity.py  experiment_gemini_sdk_fidelity.py
v2/src/arc/: __init__.py  bootstrap.py  cli.py  config.py  defaults.py  plugin_api.py  subagent_api.py  user_gate.py  wipe.py
v2/tests/integration/: test_anthropic_live.py  test_branch_and_rerun.py  test_context_manager_acceptance.py  test_gemini_live.py  test_hello_world.py  test_llama_cpp_live.py  test_logging_acceptance.py  test_mcp_http.py  test_mcp_stdio.py  test_ollama_live.py  test_pause_resume.py  test_poem_workflow.py  test_replay_acceptance.py
v2/tests/unit/: test_anthropic_provider.py  test_bash_exec.py  test_bootstrap.py  test_branch_and_rerun.py  test_bus.py  test_cli.py  test_cli_hub_routing.py  test_cli_setup_launch.py  test_compare_render.py  test_config.py  test_cycle_detection.py  test_gemini_provider.py  test_grammar_compiler.py  test_guard.py  test_jsonl_recorder.py  test_llama_cpp_provider.py  test_llm_process.py  test_llm_registry.py  test_log_writer.py  test_loop.py  test_max_cost_plugin.py  test_mcp_adapter_bridge.py  test_mcp_config.py  test_mcp_writer.py  test_ollama.py  test_openai_compat.py  test_pause_resume.py  test_plugin_discovery.py  test_plugin_enablement.py  test_pricing.py  test_replay.py  test_replay_batch.py  test_replay_override.py  test_safety_gate.py  test_scope_and_events.py  test_session_plugin_tools.py  test_setup_catalog.py  test_setup_discovery.py  test_setup_hub.py  test_setup_picker.py  (+21 more)
(+629 files in other folders)
