[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc"
version = "0.1.0"
description = "arc — agent runtime, v2"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "migo" }]
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "google-genai>=1.0",
    "anthropic>=0.30",
    "openai>=1.40",
    "httpx>=0.27",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
# MCP client integration (0025). The `mcp` built-in plugin bridges external
# MCP servers into the tool registry; the SDK is optional so lean installs stay
# lean and the plugin graceful-disables if it's absent.
mcp = [
    "mcp>=1.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mcp>=1.2",
]

[project.scripts]
arc = "arc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arc = ["plugins/*/manifest.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter
